--- a/spiderfoot/static/css/spiderfoot.css
+++ b/spiderfoot/static/css/spiderfoot.css
@@ -6723,7 +6723,7 @@ i.glyphicon-white,
 .assets-known-col-select { width: 36px; text-align: center; vertical-align: middle; }
 .assets-known-col-type { width: 90px; }
 .assets-known-col-source { width: 100px; }
-.assets-known-col-actions { width: 50px; text-align: center; }
+.assets-known-col-actions { width: 70px; text-align: center; }
 
 .assets-known-row { cursor: default; }
 
